[package]
name = "tetrisgame2"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
tsify = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "net", "io-util", "sync"] }
tokio-tungstenite = "0.21"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
